Reducing xAxes Ticks in PoW Chart

--- a/public/views/start.html
+++ b/public/views/start.html
@@ -650,7 +650,7 @@ The second step of this process is the actual voting. The previous {{.StakeVersi
 		scales: {
 			xAxes: [{
 				gridLines: {color: 'rgba(90,109,129,0.19)', zeroLineColor: 'rgba(90,109,129,0.19)'},
-				ticks: {fontSize: 10}
+				ticks: {fontSize: 10, maxTicksLimit: 12}
 			}],
 			yAxes: [{
 				gridLines: {color: 'rgba(90,109,129,0.19)', zeroLineColor: 'rgba(90,109,129,0.19)'},
