--- a/public/views/start.html
+++ b/public/views/start.html
@@ -53,6 +53,7 @@
     <div class="header">
       <div class="header w-clearfix width-1180">
         <a class="header-logo w-inline-block" href="http://www.decred.org"></a>
+        <a class="header-link w-button" href="https://github.com/decred/decred-release/releases">Download Upgrade</a>
         {{if eq .Network "testnet"}}
         <a class="header-link w-button" href="faucet.decred.org">Testnet Faucet</a>
         {{end}}
